<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Rating</string>

    <!-- MAIN ACTIVITY MENU -->
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Login</string>

    <!-- Connection results strings -->
    <string name="no_internet_access">No Internet access</string>
    <string name="server_not_respond">Server not respond</string>
    <string name="wrong_login_pass">Wrong login or password</string>
    <string name="error">Error. Can\'t load data</string>
    <string name="empty_login_pass">Empty login or password</string>

    <!-- Login activity layout -->
    <string name="tneu">TNEU</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="rating_system">rating system</string>

    <!-- Main activity layout -->
    <string name="success_updated">Success updated</string>
    <string name="error_relogin">Error with account data. Please relogin</string>
    
    <string name="title_activity_main">My Rating</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="module_x_percentage" formatted="false">&#160;x <xliff:g id="percentage">%1$s</xliff:g>%%</string>
    <string name="module_percentage" formatted="false"><xliff:g id="percentage">%1$s</xliff:g>%%</string>
    <string name="module_x_num" formatted="false">#<xliff:g id="number">%1$s</xliff:g></string>
    <string name="module_x_contribution" formatted="false">+<xliff:g id="contribution">%1$s</xliff:g></string>
    
    <string name="gained">Gained</string>
    <string name="available">Available</string>
    <string name="wasted">Wasted</string>


</resources>
