<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="0dp">

            <ImageView
                android:id="@+id/ivUniversityLogo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/university_red" />

            <TextView
                android:id="@+id/tvTneu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"
                android:layout_toRightOf="@id/ivUniversityLogo"
                android:fontFamily="fonts/Roboto-Black.ttf"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="@string/tneu"
                android:textSize="72sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tvTneu"
                android:layout_alignRight="@id/tvTneu"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="-15dp"
                android:fontFamily="fonts/Roboto-Black.ttf"
                android:text="@string/rating_system"
                android:textSize="16sp" />

        </RelativeLayout>


        <EditText
            android:id="@+id/etUserName"
            style="@style/WhiteRectangleEditText"
            android:layout_marginTop="@dimen/login_form_margin_top"
            android:hint="@string/user_name" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/WhiteRectangleEditText"
            android:layout_marginTop="1dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnSingIn"
            style="@style/RedButton"
            android:layout_marginTop="2dp"
            android:text="@string/log_in" />
    </LinearLayout>

</ScrollView>

